--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,13 @@
 .footer-style{
-    position:absolute;
-   bottom:0;
-   width:100%;
-   margin-bottom: 10px;
-   margin-top: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #343a40;
+    color: white;
+    text-align: justify;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
+    margin-top: 1rem;
 }
